WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28717
[V8] Fix compiling errors in Chromium build caused by Canvas3D changes.
https://bugs.webkit.org/show_bug.cgi?id=28717
Summary
[V8] Fix compiling errors in Chromium build caused by Canvas3D changes.
Jian Li
Reported
2009-08-25 13:39:09 PDT
Fix compiling errors in Chromium build caused by Canvas3D changes.
Attachments
Proposed Patch
(4.65 KB, patch)
2009-08-25 13:44 PDT
,
Jian Li
levin
: review+
jianli
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jian Li
Comment 1
2009-08-25 13:44:54 PDT
Created
attachment 38567
[details]
Proposed Patch
David Levin
Comment 2
2009-08-25 13:50:21 PDT
Would be nice to add a note to the change log which indicates the other revision that caused this change.
Jian Li
Comment 3
2009-08-25 14:06:13 PDT
Committed as
http://trac.webkit.org/changeset/47757
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug