[V8] Fix compiling errors in Chromium build caused by Canvas3D changes from r47752. https://bugs.webkit.org/show_bug.cgi?id=28717

Reviewed by David Levin.

* bindings/v8/DOMObjectsInclude.h:
* bindings/v8/DerivedSourcesAllInOne.cpp:
* bindings/v8/V8Index.cpp:
* bindings/v8/V8Index.h:
* bindings/v8/custom/V8DocumentCustom.cpp:
(WebCore::CALLBACK_FUNC_DECL):
* bindings/v8/custom/V8HTMLCanvasElementCustom.cpp:
(WebCore::CALLBACK_FUNC_DECL):

Canonical link: https://commits.webkit.org/39335@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47757 268f45cc-cd09-0410-ab3c-d52691b4dbfc