WebCore/bindings/v8/V8Index.cpp
@@ -33,6 +33,7 @@
 
 #include "V8Attr.h"
 #include "V8BarInfo.h"
+#include "V8CanvasRenderingContext.h"
 #include "V8CanvasRenderingContext2D.h"
 #include "V8CanvasGradient.h"
 #include "V8CanvasPattern.h"
